versioned_docs/version-2.0.0/guides/providers/email/intro.mdx
---
sidebar_position: -1
sidebar_label: Introduction
title: Email Notification Providers
pagination_label: Email Providers
slug: ./
---

# Email Providers

Courier supports a number of Email Providers. In order to send a notification using an Email Channel, the recipient profile must include an email address in the `email` property.

```json
// Recipient Profile
{
  "email": "support@courier.com"
}
```

Learn more about specific Email Integrations by selecting them on the left.

Can't find a provider? Shoot us a message using Intercom at the bottom of this page.

## Email channel-level overrides

The email channel override allows you to set the subject, reply to, from, cc, and bcc email addresses, as well as the HTML and text via an override that will apply to all your email channels\* within a template.

**\*Note:** attachment overrides done at the channel level will only work with Mailgun, Postmark, AWS SES and Amply currently. To add attachments to other providers, see the `override` section of the integration-specific doc.

**Here is the override data structure for the email channel override:
**

```json
{
  "message": {
    // ...rest of request
    "channels": {
      "email": {
        "override": {
          "attachments": [],
          "bcc": "",
          "brand": {},
          "cc": "",
          "from": "",
          "html": "",
          "reply_to": "",
          "subject": "",
          "text": "",
          "tracking": {
            "open": false
          }
        }
      }
    }
  }
}
```

## Brand override via API

`overrides.brand` uses same schema as [POST /brands](../../../reference/brands/create.mdx)

Brand elements that can be overridden:

- logo
- topbar color
- brand colors

Here is the override data structure for the email channel override. In this example, the override is setting the logo image URL.

```json
{
  "message": {
    "template": "CTJNNFP7NHMKMBPJFZX4P39ABSXR",
    "to": {
      "email": "example@someemaildomain.com"
    },
    "data": {
      "name": "Tony",
      "inviteLink": "https://courier.com/register?code=blah"
    },
    "channels": {
      "email": {
        "override": {
          "brand": {
            "settings": {
              "email": {
                "header": {
                  "logo": {
                    "image": "https://www.courier.com/logo.png",
                    "href": "https://www.courier.com"
                  },
                  "barColor": "#674ea7"
                }
              }
            }
          }
        }
      }
    }
  }
}
```

## IP Address Range

Some email providers like Mailgun offer [additional security](https://help.mailgun.com/hc/en-us/articles/360012244474-IP-Allowlist) to whitelist certain IPs from accessing their APIs. Courier is hosted on AWS and does not provide an IP range in the form of an allow list.

AWS provides [a workaround](https://docs.aws.amazon.com/general/latest/gr/aws-ip-ranges.html#subscribe-notifications) by allowing users to subscribe and update the changes themselves. Whenever there is a change to the AWS IP address ranges, AWS will send notifications to subscribers of the `AmazonIpSpaceChanged` topic.
